--- a/acerca.html
+++ b/acerca.html
@@ -40,5 +40,15 @@
     </main>
 
     <script src="./src/js/main.js"></script>
+    <!-- Animated footer waves -->
+    <div class="footer-waves" aria-hidden="true">
+      <svg viewBox="0 0 1200 200" preserveAspectRatio="none">
+        <g transform="translate(0,0)">
+          <path class="wave wave--back" d="M0,120 C150,200 350,40 600,120 C850,200 1050,40 1200,120 L1200,200 L0,200 Z" fill="rgba(59,130,246,0.12)" />
+          <path class="wave wave--mid" d="M0,140 C200,40 400,200 600,140 C800,80 1000,200 1200,140 L1200,200 L0,200 Z" fill="rgba(236,72,153,0.12)" />
+          <path class="wave wave--front" d="M0,160 C250,220 450,80 600,160 C750,240 950,80 1200,160 L1200,200 L0,200 Z" fill="rgba(234,179,8,0.14)" />
+        </g>
+      </svg>
+    </div>
   </body>
 </html>
