--- a/acerca.html
+++ b/acerca.html
@@ -6,12 +6,12 @@
     <title>Acerca - Blog Musical</title>
   <link rel="stylesheet" href="./dist/output.css">
   </head>
-  <body class="bg-music-gradient text-gray-800">
-    <header class="header-surface shadow-sm">
-      <div class="flex items-center justify-between max-w-4xl panel-surface p-4 mx-auto">
+  <body class="text-gray-800 bg-music-gradient">
+    <header class="shadow-sm header-surface">
+      <div class="flex items-center justify-between max-w-4xl p-4 mx-auto panel-surface">
         <div class="flex items-center gap-3">
-          <img src="./src/img/cover.svg" alt="Logo" class="w-10 h-10" />
-          <h1 class="text-xl font-semibold">Blog Musical</h1>
+          <img src="./src/img/logo.svg" alt="Logo" class="w-10 h-10" />
+          <h1 class="text-xl font-semibold">MUSITC</h1>
         </div>
         <nav>
           <ul class="flex gap-4 text-sm">
