--- a/index.html
+++ b/index.html
@@ -1,60 +1,67 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Blog Musical - Inicio</title>
-    <!-- Enlazamos el CSS compilado por Tailwind (dist/output.css) -->
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Blog Musical - Inicio</title>
+  <!-- Enlazamos el CSS compilado por Tailwind (dist/output.css) -->
   <link rel="stylesheet" href="./dist/output.css">
-  </head>
-  <body class="bg-music-gradient text-gray-800">
-    <!-- Header: logo y navegación principal -->
-    <header class="header-surface shadow-sm">
-      <div class="max-w-4xl panel-surface mx-auto flex items-center justify-between p-4">
-        <!-- Logo / nombre del blog -->
-        <div class="flex items-center gap-3">
-          <!-- Imagen de ejemplo en src/img -->
-          <img src="./src/img/cover.svg" alt="Logo" class="h-10 w-10" />
-          <h1 class="text-xl font-semibold">Blog Musical</h1>
-        </div>
+</head>
 
-        <!-- Navegación simple -->
-        <nav>
-          <ul class="flex gap-4 text-sm">
-            <li><a class="text-blue-600" aria-current="page" href="./index.html">Inicio</a></li>
-            <li><a class="text-gray-600 hover:underline" href="./cancion.html">Canciones</a></li>
-            <li><a class="text-gray-600 hover:underline" href="./acerca.html">Acerca</a></li>
-          </ul>
-        </nav>
+<body class="text-gray-800 bg-music-gradient">
+  <!-- Header: logo y navegación principal -->
+  <header class="shadow-sm header-surface">
+    <div class="flex items-center justify-between max-w-4xl p-4 mx-auto panel-surface">
+      <!-- Logo / nombre del blog -->
+      <div class="flex items-center gap-3">
+        <!-- Imagen de ejemplo en src/img -->
+    <img src="./src/img/logo.svg" alt="Logo" class="w-10 h-10" />
+        <h1 class="text-xl font-semibold">MUSITC</h1>
       </div>
-    </header>
 
-    <!-- Contenedor principal -->
-    <main class="max-w-4xl mx-auto p-6">
-      <!-- Introducción breve -->
-      <section class="mb-6">
-        <h2 class="text-2xl font-bold">Reflexiones sobre letras</h2>
-        <p class="text-gray-600 mt-2">Un espacio para compartir letras de canciones y pensamientos sobre ellas.</p>
-      </section>
-
-      <!-- Grid de posts: se renderizará dinámicamente desde data/post.json -->
-      <section aria-label="Listado de entradas" id="posts" class="grid gap-6 grid-cols-1 sm:grid-cols-2">
-        <!-- Mensaje de carga y fallback si JS está deshabilitado -->
-        <p id="posts-fallback" class="text-gray-500">Cargando entradas... (si no ves contenido, activa JavaScript o revisa la consola)</p>
-      </section>
-    </main>
-
-    <!-- Scripts: archivo JS principal (puede estar vacío por ahora) -->
-    <script src="./src/js/main.js"></script>
-    <!-- Animated footer waves -->
-    <div class="footer-waves" aria-hidden="true">
-      <svg viewBox="0 0 1200 200" preserveAspectRatio="none">
-        <g transform="translate(0,0)">
-          <path class="wave wave--back" d="M0,120 C150,200 350,40 600,120 C850,200 1050,40 1200,120 L1200,200 L0,200 Z" fill="rgba(59,130,246,0.12)" />
-          <path class="wave wave--mid" d="M0,140 C200,40 400,200 600,140 C800,80 1000,200 1200,140 L1200,200 L0,200 Z" fill="rgba(236,72,153,0.12)" />
-          <path class="wave wave--front" d="M0,160 C250,220 450,80 600,160 C750,240 950,80 1200,160 L1200,200 L0,200 Z" fill="rgba(234,179,8,0.14)" />
-        </g>
-      </svg>
+      <!-- Navegación simple -->
+      <nav>
+        <ul class="flex gap-4 text-sm">
+          <li><a class="text-blue-600" aria-current="page" href="./index.html">Inicio</a></li>
+          <li><a class="text-gray-600 hover:underline" href="./cancion.html">Canciones</a></li>
+          <li><a class="text-gray-600 hover:underline" href="./acerca.html">Acerca</a></li>
+        </ul>
+      </nav>
     </div>
-  </body>
+  </header>
+
+  <!-- Contenedor principal -->
+  <main class="max-w-4xl p-6 mx-auto">
+    <!-- Introducción breve -->
+    <section class="mb-6">
+      <h2 class="text-2xl font-bold">Reflexiones sobre letras</h2>
+      <p class="mt-2 text-gray-600">Un espacio para compartir letras de canciones y pensamientos sobre ellas.</p>
+    </section>
+
+    <!-- Grid de posts: se renderizará dinámicamente desde data/post.json -->
+    <section aria-label="Listado de entradas" id="posts" class="grid grid-cols-1 gap-6 sm:grid-cols-2">
+      <!-- Mensaje de carga y fallback si JS está deshabilitado -->
+      <p id="posts-fallback" class="text-gray-500">Cargando entradas... (si no ves contenido, activa JavaScript o revisa
+        la consola)</p>
+    </section>
+  </main>
+
+  <!-- Scripts: archivo JS principal (puede estar vacío por ahora) -->
+  <script src="./src/js/main.js"></script>
+  <!-- Animated footer waves -->
+  <div class="footer-waves" aria-hidden="true">
+    <svg viewBox="0 0 1200 200" preserveAspectRatio="none">
+      <g transform="translate(0,0)">
+        <path class="wave wave--back" d="M0,120 C150,200 350,40 600,120 C850,200 1050,40 1200,120 L1200,200 L0,200 Z"
+          fill="rgba(59,130,246,0.12)" />
+        <path class="wave wave--mid" d="M0,140 C200,40 400,200 600,140 C800,80 1000,200 1200,140 L1200,200 L0,200 Z"
+          fill="rgba(236,72,153,0.12)" />
+        <path class="wave wave--front" d="M0,160 C250,220 450,80 600,160 C750,240 950,80 1200,160 L1200,200 L0,200 Z"
+          fill="rgba(234,179,8,0.14)" />
+      </g>
+    </svg>
+  </div>
+</body>
+
 </html>
