--- a/cancion.html
+++ b/cancion.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Blog Musical - Canciones</title>
   <link rel="stylesheet" href="./dist/output.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rakkas&family=Open+Sans:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body class="text-gray-800 bg-music-gradient">
@@ -13,7 +18,7 @@
     <div class="flex items-center justify-between max-w-4xl p-4 mx-auto panel-surface">
       <div class="flex items-center gap-3">
         <img src="./src/img/logo.svg" alt="Logo" class="w-10 h-10" />
-        <h1 class="text-xl font-semibold">MUSITC</h1>
+        <h1 class="text-xl">MUSITC</h1>
       </div>
       <nav>
         <ul class="flex gap-4 text-sm">
