--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>Blog Musical - Inicio</title>
   <!-- Enlazamos el CSS compilado por Tailwind (dist/output.css) -->
   <link rel="stylesheet" href="./dist/output.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rakkas&family=Open+Sans:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body class="text-gray-800 bg-music-gradient">
@@ -17,7 +22,7 @@
       <div class="flex items-center gap-3">
         <!-- Imagen de ejemplo en src/img -->
         <img src="./src/img/logo.svg" alt="Logo" class="w-10 h-10" />
-        <h1 class="text-xl font-semibold">MUSITC</h1>
+        <h1 class="text-xl">MUSITC</h1>
       </div>
 
       <!-- Navegación simple -->
