--- a/cancion.html
+++ b/cancion.html
@@ -33,25 +33,21 @@
   <main class="max-w-4xl p-6 mx-auto">
     <section id="filters" class="mb-6">
       <h2 class="mb-2 text-lg font-semibold">Filtrar canciones</h2>
-
-      <div class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between">
-        <!-- Selectores -->
-        <div class="flex flex-wrap gap-3">
-          <select id="filter-author" class="px-3 py-2 border rounded">
-            <option value="">Todos los autores</option>
-          </select>
-          <select id="filter-genre" class="px-3 py-2 border rounded">
-            <option value="">Todos los géneros</option>
-          </select>
-        </div>
-
-        <!-- Botón -->
-        <button id="clear-filters"
-          class="self-start px-4 py-2 text-sm text-white bg-blue-600 rounded hover:bg-blue-700 sm:self-auto">
+      <div class="grid grid-cols-1 gap-3 sm:grid-cols-3">
+        <select id="filter-author"
+          class="px-4 py-2 pr-10 text-sm text-gray-700 bg-gray-100 border-0 rounded hover:bg-gray-200 focus:bg-white focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <option value="">Todos los autores</option>
+        </select>
+        <select id="filter-genre"
+          class="px-4 py-2 pr-10 text-sm text-gray-700 bg-gray-100 border-0 rounded hover:bg-gray-200 focus:bg-white focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <option value="">Todos los géneros</option>
+        </select>
+        <button id="clear-filters" class="px-4 py-2 text-sm text-white bg-blue-600 rounded hover:bg-blue-700">
           Limpiar filtros
         </button>
       </div>
     </section>
+
 
     <!-- Visor único de canción -->
     <section id="viewer" class="mt-6">
