Cambios Visuales e integracion de Comunidad

--- a/acerca.html
+++ b/acerca.html
@@ -25,6 +25,7 @@
           <li><a class="text-gray-600 hover:underline" href="./index.html">Inicio</a></li>
           <li><a class="text-gray-600 hover:underline" href="./cancion.html">Canciones</a></li>
           <li><a class="text-blue-600" aria-current="page" href="./acerca.html">Acerca</a></li>
+          <li><a class="text-gray-600 hover:underline" href="./contacto.html">Comunidad</a></li>
         </ul>
       </nav>
     </div>
@@ -33,12 +34,13 @@
   <main class="max-w-4xl p-6 mx-auto">
     <article class="p-6 bg-white rounded-lg shadow">
       <h2 class="text-2xl font-bold">Acerca de este blog</h2>
-      <p class="mt-4 text-gray-600">Este es un blog musical sencillo pensado para publicar letras de canciones y
-        reflexiones personales sobre ellas. La idea es mantener un formato limpio y fácil de mantener: cada entrada
-        contiene el título de la canción, un breve contexto y la letra completa en la página de detalle.</p>
+      <p class="mt-4 text-gray-600">Este es un blog musical sencillo pensado para publicar reflexiones personales sobre
+        las canciones. La idea es mantener un formato limpio y fácil de mantener: cada entrada
+        contiene el título de la canción, los datos generales de cada autor y la reflexion en la página de detalle.</p>
 
       <h3 class="mt-4 text-lg font-semibold">Sobre esta página</h3>
-      <p class="mt-2 text-gray-600">Este espacio nació como un lugar para compartir letras y pensamientos sobre música.
+      <p class="mt-2 text-gray-600">Este espacio nació como un lugar para compartir canciones y pensamientos sobre
+        música.
         Está hecho con cariño y sin pretensiones: una pequeña bitácora hecha con amor por un chileno que disfruta de las
         canciones y las historias que cuentan.</p>
 
