--- a/cancion.html
+++ b/cancion.html
@@ -25,6 +25,7 @@
           <li><a class="text-gray-600 hover:underline" href="./index.html">Inicio</a></li>
           <li><a class="text-blue-600" aria-current="page" href="./cancion.html">Canciones</a></li>
           <li><a class="text-gray-600 hover:underline" href="./acerca.html">Acerca</a></li>
+          <li><a class="text-gray-600 hover:underline" href="./contacto.html">Comunidad</a></li>
         </ul>
       </nav>
     </div>
