--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li><a class="text-blue-600" aria-current="page" href="./index.html">Inicio</a></li>
           <li><a class="text-gray-600 hover:underline" href="./cancion.html">Canciones</a></li>
           <li><a class="text-gray-600 hover:underline" href="./acerca.html">Acerca</a></li>
+          <li><a class="text-gray-600 hover:underline" href="./contacto.html">Comunidad</a></li>
         </ul>
       </nav>
     </div>
@@ -63,6 +64,8 @@
           class="px-3 py-2 text-sm bg-gray-100 rounded hover:bg-gray-200">Electrónica</a>
       </div>
     </section>
+
+    
 
   </main>
 
